# medium-bot-post

./: .env.example  .gitignore  README.md  pyproject.toml  topics.txt
config/: crontab
scripts/: run-daily.sh
src/medium_bot/: __init__.py  cli.py  config.py  generator.py  history.py  medium.py  models.py  service.py  topics.py
tests/: test_bot.py
