[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "medium-devops-bot"
version = "0.1.0"
description = "Generate daily DevOps, infrastructure, and MLOps drafts for human-approved Medium publishing."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
medium-bot = "medium_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
